--- a/css/style.css
+++ b/css/style.css
@@ -257,7 +257,8 @@ button{
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .mobile-menu-navigation-link:hover,
-.mobile-menu-navigation-link:focus {
+.mobile-menu-navigation-link:focus,
+.mobile-menu-navigation-link.current {
     color: #404BBF;
 }
 .mobile-menu-contact{
@@ -277,8 +278,8 @@ button{
     color: #434455;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.mobile-menu-contact-link:hover,
-.mobile-menu-contact-link:focus{
+.mobile-menu-contact-link:focus,
+.mobile-menu-contact-link.mobile{
     color: #4D5AE5;
 }
 .mobile-menu-social-links{
@@ -441,7 +442,7 @@ button{
 .benefits-list {
     display: flex;
     flex-direction: column;
-    gap: 24px;
+    gap: 72px;
 }
 .benefits-icons{
     display: none;
@@ -507,7 +508,7 @@ button{
     color: #434455;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    font-weight: 400px; 
+    font-weight: 400; 
 }
 }
 
@@ -528,6 +529,7 @@ button{
 .team-cards {
     display: flex;
     flex-direction: column;
+    align-items: center;
     justify-content: center;
     gap: 72px;
 }
@@ -587,7 +589,8 @@ button{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    gap: 24px;
+    column-gap: 24px;
+    row-gap: 72px;
 }
 .team-cards-item {
     flex-basis: calc((100% - 24px) / 2);
@@ -681,7 +684,8 @@ button{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    gap: 24px;
+    column-gap: 24px;
+    row-gap: 72px;
 }
 .portfolio-cards-item {
     flex-basis: calc((100% - 24px) / 2);
@@ -691,7 +695,9 @@ button{
 .portfolio {
     padding: 120px 0;
 }
-
+.portfolio-cards{
+    row-gap: 48px;
+}
 .portfolio-cards-item {
     flex-basis: calc((100% - 48px) / 3);
 }
@@ -699,14 +705,16 @@ button{
 /*Footer*/
 .bottom {
     background-color: #2e2f42;
+    padding: 96px 0;
 }
 .bottom-container{
-    padding: 96px 16px;
-    display: block;
+    padding: 0 16px;
+    display: flex;
+    flex-direction: column;
+    row-gap: 72px;
 }
 .bottom-link{
     display: block;
-    margin-bottom: 72px;
 }
 .bottom-link-logo {
     display: block;
@@ -727,14 +735,13 @@ button{
     color: #f4f4fd;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    max-width: 264px;
+    max-width: 288px;
 }
 .bottom-media{
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 16px;
-    margin-bottom: 72px;
 }
 .bottom-media-text{
     font-weight: 500;
@@ -790,7 +797,7 @@ button{
 .bottom-form-input{
     border: 1px solid #FFFFFF;
     border-radius: 4px;
-    width: 264px;
+    width: 288px;
     height: 40px;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
     font-weight: 400;
@@ -839,13 +846,17 @@ button{
 }
 @media screen and (min-width:768px) {
     .bottom-container{
-    padding: 96px 108px;   
+    padding: 0 108px;   
     display: flex;
+    flex-direction: row;
     align-items: baseline;
     flex-wrap: wrap;
+    row-gap: 72px;
+    column-gap: 24px;
 }
-    .bottom-link{
-    margin-right: 24px;
+
+.bottom--link-text{
+    max-width: 264px;
 }
 .bottom-link-logo {
     text-align: start;
@@ -861,11 +872,18 @@ button{
     align-items: start;
     gap: 24px;
 }
+.bottom-form-input{
+    width: 264px;
+}
 }
 @media screen and (min-width:1158px){
     .bottom-container{
-    padding: 100px 0;
+    padding: 0 15px;
     flex-wrap: nowrap;
+    gap: 0;
+}
+.bottom{
+    padding: 100px 0;
 }
 .bottom-link{
     margin-right: 120px;
@@ -904,7 +922,7 @@ button{
     border-radius: 4px;
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    padding: 72px 24px 24px 24px;
+    padding: 72px 16px 24px 16px;
 }
 .backdrop:not(.is-open) .modal{
     transform: translate(-50%, -100%);
@@ -951,6 +969,14 @@ button{
 }
 .modal-field-comment{
     margin-bottom: 16px;
+}
+.modal-field-label{
+    display: block;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: #8E8F99;
+    margin-bottom: 4px;
 }
 .modal-field-info-wrapper{
     position: relative;
@@ -1030,11 +1056,15 @@ button{
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-field-privacy{
+    display: flex;
+    align-items: center;
+    }
+.modal-field-privacy-text{
     font-weight: 400;
     font-size: 12px;
     line-height: 1.17;
     letter-spacing: 0.04em;
-    color: #8E8F99;
+    color: #8E8F99;    
     }
 .modal-field-privacy-link{
     line-height: 1.3;
@@ -1074,11 +1104,11 @@ button{
     .modal {
     width: 408px;
     min-height: 524px;
+    padding: 72px 24px 24px 24px;
     }
 }
 @media screen and (min-width:1158px){
     .modal {
-    width: 408px;
     min-height: 584px;
     }
 }
